# path-tracer

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
assets/: cornell_custom.glb
benches/: scene_bench.rs
pkg/: README.md  package.json  path_tracer.d.ts  path_tracer.js  path_tracer_bg.wasm  path_tracer_bg.wasm.d.ts
src/: lib.rs
src/render/: debug_bvh.wgsl  mod.rs  scene.rs  shader.wgsl  state.rs  trace_paths.wgsl  vertex_fragment.wgsl
src/utils/: expect_universal.rs
