[package]
name = "path-tracer"
version = "0.1.0"
edition = "2024"
description = "Demo Rust wgpu interactive path tracer."
repository = "https://github.com/0dpe/path-tracer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# avoid "the bin target the bin target `path-tracer` in package `path-tracer v0.1.0 ()` has the same output filename as the lib target `path-tracer` in package `path-tracer v0.1.0 ()`
[[bin]]
name = "path-tracer-app"
path = "src/main.rs"

[features]
testing = ["dep:image", "dep:serde", "dep:serde_yaml"]

[[bench]]
name = "scene_bench"
harness = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.2"

[dependencies]
wgpu = "29.0.3"
winit = "0.30.13"
log = "0.4.29"
gltf = { version = "1.4.1", features = [
    "KHR_materials_specular",
    "KHR_materials_emissive_strength",
] }
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.33.0", features = ["bytemuck", "serde"] }
web-time = "1.1.0"
guillotiere = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = ["Response"] }
js-sys = "0.3.99"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
pollster = "0.4.0"
image = { version = "0.25.10", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9.34+deprecated", optional = true }
